==> ARMmbed/mbed-os/targets/TARGET_Atmel/TARGET_SAM_CortexM0P/spi_api.c <==
#include "mbed_assert.h"
#include "spi_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "sercom.h"
#include "pinmap_function.h"
#define 	SERCOM_SPI_STATUS_SYNCBUSY_Pos   15
#define 	SERCOM_SPI_STATUS_SYNCBUSY   (0x1u << SERCOM_SPI_STATUS_SYNCBUSY_Pos)
#define SPI_MOSI_INDEX	0
#define SPI_MISO_INDEX	1
#define SPI_SCLK_INDEX	2
#define SPI_SSEL_INDEX	3
#define pSPI_S(obj)			(&obj->spi)
#define pSPI_SERCOM(obj)	obj->spi.spi
#define pSPI_S(obj)			(obj)
#define pSPI_SERCOM(obj)	(obj->spi)
#define _SPI(obj)			pSPI_SERCOM(obj)->SPI
#define SPI_DEFAULT_BAUD	100000
#  define SPI_TIMEOUT 10000

static inline bool spi_write(spi_t *obj, uint16_t tx_data)
{
    /* Sanity check arguments */
    MBED_ASSERT(obj);

    /* Check if the data register has been copied to the shift register */
    if (!spi_is_ready_to_write(obj)) {
        /* Data register has not been copied to the shift register, return */
        return false;
    }

    /* Write the character to the DATA register */
    _SPI(obj).DATA.reg = tx_data & SERCOM_SPI_DATA_MASK;

    return true;
}

static inline bool spi_read(spi_t *obj, uint16_t *rx_data)
{
    /* Sanity check arguments */
    MBED_ASSERT(obj);

    /* Check if data is ready to be read */
    if (!spi_is_ready_to_read(obj)) {
        /* No data has been received, return */
        return false;
    }

    /* Check if data is overflown */
    if (_SPI(obj).STATUS.reg & SERCOM_SPI_STATUS_BUFOVF) {
        /* Clear overflow flag */
        _SPI(obj).STATUS.reg |= SERCOM_SPI_STATUS_BUFOVF;
    }

    /* Read the character from the DATA register */
    if (_SPI(obj).CTRLB.bit.CHSIZE == 1) {
        *rx_data = (_SPI(obj).DATA.reg & SERCOM_SPI_DATA_MASK);
    } else {
        *rx_data = (uint8_t)_SPI(obj).DATA.reg;
    }

    return true;
}

void spi_init(spi_t *obj, PinName mosi, PinName miso, PinName sclk, PinName ssel)
{
    /* Sanity check arguments */
    MBED_ASSERT(obj);
    MBED_ASSERT(sclk != NC);

    uint16_t baud = 0;
    uint32_t ctrla = 0;
    uint32_t ctrlb = 0;
    enum status_code error_code;

    if (g_sys_init == 0) {
        system_init();
        g_sys_init = 1;
    }

    /* Calculate SERCOM instance from pins */
    uint32_t sercom_index = pinmap_find_sercom(mosi, miso, sclk, ssel);
    pSPI_SERCOM(obj) = (Sercom*)pinmap_peripheral_sercom(NC, sercom_index);

    /* Disable SPI */
    spi_disable(obj);

    /* Check if reset is in progress. */
    if (_SPI(obj).CTRLA.reg & SERCOM_SPI_CTRLA_SWRST) {
        return;
    }

    uint32_t pm_index, gclk_index;
#if (SAML21)
    if (sercom_index == 5) {
#  ifdef ID_SERCOM5
        pm_index     = MCLK_APBDMASK_SERCOM5_Pos;
        gclk_index   =  SERCOM5_GCLK_ID_CORE;
#  else
        return STATUS_ERR_INVALID_ARG;
#  endif
    } else {
        pm_index     = sercom_index + MCLK_APBCMASK_SERCOM0_Pos;
        gclk_index   = sercom_index + SERCOM0_GCLK_ID_CORE;
    }
#elif (SAMC21)
    if (sercom_index == 5) {
#  ifdef ID_SERCOM5
        pm_index     = MCLK_APBCMASK_SERCOM5_Pos;
        gclk_index   =  SERCOM5_GCLK_ID_CORE;
#  else
        return STATUS_ERR_INVALID_ARG;
#  endif
    } else {
        pm_index     = sercom_index + MCLK_APBCMASK_SERCOM0_Pos;
        gclk_index   = sercom_index + SERCOM0_GCLK_ID_CORE;
    }
#elif (SAMC20)
    pm_index     = sercom_index + MCLK_APBCMASK_SERCOM0_Pos;
    gclk_index   = sercom_index + SERCOM0_GCLK_ID_CORE;
#else
    pm_index     = sercom_index + PM_APBCMASK_SERCOM0_Pos;
    gclk_index   = sercom_index + SERCOM0_GCLK_ID_CORE;
#endif

    /* Turn on module in PM */
#if (SAML21)
    if (sercom_index == 5) {
#  ifdef ID_SERCOM5
        system_apb_clock_set_mask(SYSTEM_CLOCK_APB_APBD, 1 << pm_index);
#  else
        return STATUS_ERR_INVALID_ARG;
#  endif
    } else {
        system_apb_clock_set_mask(SYSTEM_CLOCK_APB_APBC, 1 << pm_index);
    }
#else
    system_apb_clock_set_mask(SYSTEM_CLOCK_APB_APBC, 1 << pm_index);
#endif

    /* Set up the GCLK for the module */
    struct system_gclk_chan_config gclk_chan_conf;
    system_gclk_chan_get_config_defaults(&gclk_chan_conf);
    gclk_chan_conf.source_generator = GCLK_GENERATOR_0;
    system_gclk_chan_set_config(gclk_index, &gclk_chan_conf);
    system_gclk_chan_enable(gclk_index);
    sercom_set_gclk_generator(GCLK_GENERATOR_0, false);

    /* Set the SERCOM in SPI master mode */
    _SPI(obj).CTRLA.reg |= SERCOM_SPI_CTRLA_MODE(0x3);
    pSPI_S(obj)->mode = SPI_MODE_MASTER;

    /* TODO: Do pin muxing here */
    struct system_pinmux_config pin_conf;
    system_pinmux_get_config_defaults(&pin_conf);
    pin_conf.direction = SYSTEM_PINMUX_PIN_DIR_INPUT;

    pSPI_S(obj)->pins[SPI_MOSI_INDEX] = mosi;
    pSPI_S(obj)->pins[SPI_MISO_INDEX] = miso;
    pSPI_S(obj)->pins[SPI_SCLK_INDEX] = sclk;
    pSPI_S(obj)->pins[SPI_SSEL_INDEX] = ssel;
    /* Configure the SERCOM pins according to the user configuration */
    for (uint8_t pad = 0; pad < 4; pad++) {
        uint32_t current_pin = pSPI_S(obj)->pins[pad];
        if (current_pin != (uint32_t)NC) {
            pin_conf.mux_position = pinmap_function_sercom((PinName)current_pin, sercom_index);
            if ((uint8_t)NC != pin_conf.mux_position) {
                system_pinmux_pin_set_config(current_pin, &pin_conf);
            }
        }
    }

    /* Get baud value, based on baudrate and the internal clock frequency */
    uint32_t internal_clock = system_gclk_chan_get_hz(gclk_index);
    //internal_clock = 8000000;
    error_code = _sercom_get_sync_baud_val(SPI_DEFAULT_BAUD, internal_clock, &baud);
    if (error_code != STATUS_OK) {
        /* Baud rate calculation error */
        return;
    }
    _SPI(obj).BAUD.reg = (uint8_t)baud;

    /* TODO: Find MUX settings */
    ctrla |= spi_find_mux_settings(obj);

    /* Set SPI character size */
    ctrlb |= SERCOM_SPI_CTRLB_CHSIZE(0);

    /* Enable receiver */
    ctrlb |= SERCOM_SPI_CTRLB_RXEN;

    /* Write CTRLA register */
    _SPI(obj).CTRLA.reg |= ctrla;

    /* Write CTRLB register */
    _SPI(obj).CTRLB.reg |= ctrlb;

    /* Enable SPI */
    spi_enable(obj);
}

void spi_format(spi_t *obj, int bits, int mode, int slave)
{
    PinMode pull_mode;
    /* Sanity check arguments */
    MBED_ASSERT(obj);

    /* Disable SPI */
    spi_disable(obj);


    if (slave) {
        /* Set the SERCOM in SPI mode */
        _SPI(obj).CTRLA.bit.MODE = 0x2;
        pSPI_S(obj)->mode = SPI_MODE_SLAVE;
        pull_mode = PullNone;
        /* Enable PLOADEN to avoid sending dummy character by slave */
        _SPI(obj).CTRLB.bit.PLOADEN = 1;
    } else {
        /* Set the SERCOM in SPI mode */
        _SPI(obj).CTRLA.bit.MODE = 0x3;
        pSPI_S(obj)->mode = SPI_MODE_MASTER;
        pull_mode = PullUp;
    }

    /* Change pull mode of pins */
    for (uint8_t pad = 0; pad < 4; pad++) {
        if (pSPI_S(obj)->pins[pad] != NC) {
            pin_mode(pSPI_S(obj)->pins[pad], pull_mode);
        }
    }

    /* Change MUX settings */
    uint32_t ctrla = _SPI(obj).CTRLA.reg;
    ctrla &= ~(SERCOM_SPI_CTRLA_DIPO_Msk | SERCOM_SPI_CTRLA_DOPO_Msk);
    ctrla |= spi_find_mux_settings(obj);
    _SPI(obj).CTRLA.reg = ctrla;

    /* Set SPI Frame size - only 8-bit and 9-bit supported now */
    _SPI(obj).CTRLB.bit.CHSIZE = (bits > 8)? 1 : 0;

    /* Set SPI Clock Phase */
    _SPI(obj).CTRLA.bit.CPHA = (mode & 0x01)? 1 : 0;

    /* Set SPI Clock Polarity */
    _SPI(obj).CTRLA.bit.CPOL = (mode & 0x02)? 1 : 0;

    /* Enable SPI */
    spi_enable(obj);
}

void spi_frequency(spi_t *obj, int hz)
{
    uint16_t baud = 0;
    uint32_t gclk_index = 0;
    /* Sanity check arguments */
    MBED_ASSERT(obj);

    /* Disable SPI */
    spi_disable(obj);

    /* Find frequency of the internal SERCOMi_GCLK_ID_CORE */
    uint32_t sercom_index = _sercom_get_sercom_inst_index(pSPI_SERCOM(obj));
#if (SAML21)
    if (sercom_index == 5) {
#  ifdef ID_SERCOM5
        gclk_index   =  SERCOM5_GCLK_ID_CORE;
#  else
        return STATUS_ERR_INVALID_ARG;
#  endif
    } else {
        gclk_index   = sercom_index + SERCOM0_GCLK_ID_CORE;
    }
#elif (SAMC21)
    if (sercom_index == 5) {
#  ifdef ID_SERCOM5
        gclk_index   =  SERCOM5_GCLK_ID_CORE;
#  else
        return STATUS_ERR_INVALID_ARG;
#  endif
    } else {
        gclk_index   = sercom_index + SERCOM0_GCLK_ID_CORE;
    }
#elif (SAMC20)
    gclk_index   = sercom_index + SERCOM0_GCLK_ID_CORE;
#else
    gclk_index   = sercom_index + SERCOM0_GCLK_ID_CORE;
#endif
    uint32_t internal_clock = system_gclk_chan_get_hz(gclk_index);

    /* Get baud value, based on baudrate and the internal clock frequency */
    enum status_code error_code = _sercom_get_sync_baud_val(hz, internal_clock, &baud);

    if (error_code != STATUS_OK) {
        /* Baud rate calculation error, return status code */
        /* Enable SPI */
        spi_enable(obj);
        return;
    }

    _SPI(obj).BAUD.reg = (uint8_t)baud;

    /* Enable SPI */
    spi_enable(obj);
}

void spi_slave_write(spi_t *obj, int value)
{
    int i;

    /* Sanity check arguments */
    MBED_ASSERT(obj);

    /* Check for timeout period */
    for (i = 0; i < SPI_TIMEOUT; i++) {
        if (spi_is_ready_to_write(obj)) {
            break;
        }
    }
    if (i == SPI_TIMEOUT) {
        /* Not ready to write data within timeout period */
        return;
    }

    /* Write data */
    spi_write(obj, value);
}
